# dice

app/: Cargo.toml  README.md  build.rs
app/assets/: dice.amxd  dice.encode.js  dice.txt
app/src/: lib.rs  utils.rs
datasets/presets/: default.json
datasets/src/: pattern.py  pattern_test.py  sequence_test.py
datasets/src/dice_datasets/: __init__.py  dataset.py  pattern.py
datasets/tests/: test_pattern.py
models/scripts/: train_model.py
models/src/dice_models/: loss_functions.py  utils.py
models/src/dice_models/architectures/: __init__.py
models/tests/: test_architectures.py  test_loss.py
