[package]
name = "dice"
version = "0.1.0"
authors = ["eilseq <tools@eilseq.com>"]
edition = "2018"

[lib]
name = "dice"
crate-type = ["cdylib"]

[dependencies]
median = { git = "https://github.com/Cycling74/median" }
wonnx = "0.5.1"
tokio = { version = "1.42.0", features = ["full"] }
maplit = "1.0"

[profile.release]
lto = true
panic = "abort"
